Fix hiding message overflow.

--- a/stylesheets/chat-screen.css
+++ b/stylesheets/chat-screen.css
@@ -182,7 +182,7 @@
 }
 
 .message {
-  overflow: visible;
+  overflow: hidden;
   overflow-wrap: break-word;
 }
 
